# fterminal

./: .gitignore  CMakeLists.txt  README.md  configuration.c  configuration.h  hacking.c  hacking.h  main.c  preferences.h  shell.c  shell.h  utilities.c  utilities.h
guesses/: 10  11  12  13  14  15  16  4  5  6  7  8  9
